html study done, css study

--- a/html-study/01.html
+++ b/html-study/01.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- markdown文档的由来，就是从这个来的，具体的css负责渲染 -->
+    <ol>
+        <li>结构
+            <ol>结构1
+               <ul>
+                   <li>机构2</li>
+               </ul>
+            </ol>
+        </li>
+        <li>表现</li>
+        <li>行为</li>
+    </ol>
 </body>
 </html> 
