--- a/html-study/css_study/box_horizon.html
+++ b/html-study/css_study/box_horizon.html
@@ -14,15 +14,17 @@
         .inner{
             width: 200px;
             height: 200px;
-            background-color: #bfa;
+            /* background-color: #bfa;
             margin-right: 300px;
-            margin-left: auto;
+            margin-left: auto; */
+            background-color: #bfa;
+            margin: 0px auto;
         }
     </style>
 </head>
 <body>
     <div class="outer">
-        <div class="inner"></div>
+        <div class="inner">哈哈，测试水平布局</div>
     </div>
 
 </body>
