--- a/html-study/exercise/简单的布局.html
+++ b/html-study/exercise/简单的布局.html
@@ -49,7 +49,8 @@
             margin-bottom: 10px;
         }
 
-        .one,.three {
+        .one,
+        .three {
             height: 200px;
             width: 220px;
             background-color: red;
